<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="message">Tin nhắn</string>
    <string name="user">Người dùng</string>
    <string name="friend">Bạn bè</string>
    <string name="call">Cuộc gọi</string>
    <string name="profile">Hồ sơ</string>
    <string name="search">Tìm kiếm</string>
    <string name="notifications">Thông báo</string>
    <string name="conmunication">Cộng đồng</string>
    <string name="delete">Xóa</string>
    <string name="share">Chia sẻ</string>
    <string name="send_feedback">Góp ý với chúng tôi</string>
    <string name="calling...">Đang gọi …</string>
    <string name="callComing...">Cuộc dọi đến …</string>
    <string name="enter_message">Nhập tin nhắn …</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_userName">Nhập tên người dùng</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="enterConfirmPassword">Nhập lại mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="send_voice">Gửi âm thanh</string>
    <string name="send_image">Gửi hình ảnh</string>
    <string name="sended_image">\u0020đã gửi một ảnh.</string>
    <string name="send_enmoji">Gửi biểu cảm</string>
    <string name="send_message">Gửi tin nhắn</string>
    <string name="email">Email</string>
    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="password">Mật khẩu</string>
    <string name="describe_yourself">Mô tả bản thân</string>
    <string name="username">Tên người dùng</string>
    <string name="gender">Giới tính</string>
    <string name="last_message">Tin nhắn cuối</string>
    <string name="statusActivity">Trạng thái hoạt động</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="time">Thời gian</string>
    <string name="view_profile">Xem trang cá nhân</string>
    <string name="delete_chatBox">Xóa đoạn chat</string>
    <string name="videoCall">Cuộc gọi video</string>
    <string name="voiceCall">Cuộc gọi thoại</string>
    <string name="time_history_call">01/01/2000, 00:00 PM</string>
    <string name="LOGO">Logo</string>
    <string name="signIn">Đăng nhập</string>
    <string name="signUp">Đăng ký</string>
    <string name="updateProfile">Cập nhật hồ sơ cá nhân</string>
    <string name="logout">Đăng xuất</string>
    <string name="deleteAccount">Xóa tài khoản</string>
    <string name="save">Lưu</string>
    <string name="add_friend">Thêm bạn bè</string>
    <string name="cancel_request">Hủy yêu cầu</string>
    <string name="cancel">Hủy</string>
    <string name="unfriend">Hủy kết bạn</string>
    <string name="accept">Chấp nhận</string>
    <string name="confirm">Xác nhận</string>
    <string name="decline">Từ chối</string>
    <string name="reply">Trả lời</string>
    <string name="clearAllHistoryCall">Xóa danh sách lịch sử cuộc gọi?</string>
    <string name="clearAllMessage">Xóa toàn bộ cuộc trò chuyện này?</string>
    <string name="signOutOfYourAccount">Đăng xuất khỏi tài khoản của bạn?</string>
    <string name="confirmDeleteAccout">Bạn chắc chắn muốn xóa vĩnh viễn tài khoản?</string>
    <string name="confirmUnfriend">Xác nhận hủy kết bạn?</string>
    <string name="clear_history_call">Xóa cuộc gọi khỏi nhật ký</string>
    <string name="sentAFriendRequest">đã gửi lời mời kết bạn</string>
    <string name="enterEmail">Nhập Email</string>
    <string name="enterUserName">Nhập Tên người dùng</string>
    <string name="enterPassword">Nhập Mật khẩu</string>
    <string name="confirmPassword">Nhập Xác nhận mật khẩu</string>
    <string name="signUpWith">Đăng ký bằng</string>
    <string name="signInWith">Đăng nhập bằng</string>
    <string name="welcomeBack">Chào mừng trở lại!</string>
    <string name="rememberPassword">Lưu mật khẩu</string>
</resources>