<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    tools:context=".View.ChatActivity">

    <include
        android:id="@+id/chat_toolbar"
        layout="@layout/app_bar_chat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_chat"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageViewSendImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/icon_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/send_image" />
        <ImageView
            android:id="@+id/imageViewSendVoice"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/icon_voice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/send_voice" />
        <ImageView
            android:id="@+id/imageViewSendEnmoji"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/icon_enmoji"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/send_enmoji" />

        <EditText
            android:id="@+id/edtInputMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/frame_enter_mesage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:hint="@string/enter_message"
            android:textColorHint="@color/slateBlue"
            tools:ignore="Autofill"
            android:inputType="textLongMessage" />

        <ImageView
            android:id="@+id/imageViewSendMessage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/icon_send"
            android:contentDescription="@string/send_message" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>