<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_update_profile"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/clearAllHistoryCall"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelConfirmDeleteCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:alpha="0.4"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/grey" />

        <Button
            android:id="@+id/btnConfirmDeleteCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/primary" />

    </LinearLayout>


</LinearLayout>