<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civAvatarItemRequest"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/default_avatar" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvItemRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:text="@string/sentAFriendRequest"
                android:maxLines="1"
                android:textColor="@color/slateBlue"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <Button
                    android:id="@+id/btnConfirmRequest"
                    android:layout_width="70dp"
                    android:layout_height="24dp"
                    android:background="@drawable/custom_button_confirm"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:layout_marginEnd="5dp"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/btnRefuseRequest"
                    android:layout_width="70dp"
                    android:layout_height="24dp"
                    android:background="@drawable/custom_button_refuse"
                    android:text="@string/decline"
                    android:layout_marginStart="5dp"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:maxLines="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>