<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/primary"
    android:theme="@style/AppTheme.Toolbar">

    <LinearLayout
        android:id="@+id/userChat"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civAvatarUserChat"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/default_avatar" />

            <ImageView
                android:id="@+id/ivStatusActivity"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_alignEnd="@id/civAvatarUserChat"
                android:layout_alignBottom="@id/civAvatarUserChat"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/statusActivity" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvUserNameToolChat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserOnl_OffChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/online"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>